syntax = "proto3";
package pb_message;

message Request {
    message ArgsArray {
        repeated string args = 1;
    }
    
    uint32 callback_idx = 1;
    RequestType request_type = 2;
    oneof args {
        ArgsArray args_array = 3;
        uint64 args_vec_pointer = 4;
    }
}

enum RequestType {
    /// Invalid request type
    InvalidRequest = 0;
    /// Type of a server address request
    ServerAddress = 1;
    /// Type of a get string request.
    GetString = 2;
    /// Type of a set string request.
    SetString = 3;
}

message Response {
    uint32 callback_idx = 1;
    oneof value {
        uint64 resp_pointer = 2;
        ConstantResponse constant_response = 3;
        string request_error = 4;
        string closing_error = 5;
    }
}

enum ConstantResponse {
  OK = 0;
}
